Refactor project structure and enhance API functionality
- Updated .gitignore to include environment files.
- Changed docker-compose to use the new .env file.
- Renamed artifactId in pom.xml for clarity.
- Added Swagger annotations for API documentation in ResultController and StudentController.
- Implemented CRUD operations for Subject management in SubjectController.
- Enhanced ResultService and StudentService with new methods for handling results and students.
- Improved error handling in GlobalExceptionHandler to include validation exceptions.
- Updated ResultDTO and SubjectDTO with validation annotations.
- Refactored various service implementations for better readability and maintainability.

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,9 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-.env*
+### env ###
+.env
+.env.local
 /src/main/resources/.env.properties
 
 ### STS ###
@@ -34,4 +36,3 @@ build/
 
 ### VS Code ###
 .vscode/
-
