--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   config:
     import: .env.properties
   application:
-    name: gscores
+    name: spring-pratice
   datasource:
     url: ${DB_URL}
     username: ${DB_USERNAME}
@@ -24,5 +24,6 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
     show-sql: true
-
-
+springdoc:
+  api-docs:
+    path: /api-docs
