Add Redis caching support and update Docker configuration
- Added Redis service to docker-compose.yml for caching.
- Included Redis dependencies in pom.xml for integration.
- Implemented caching logic in StudentServiceImpl to improve performance.
- Configured Redis connection settings in application.yml.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,11 +36,21 @@ services:
     networks:
       - postgres
     restart: unless-stopped
+  
+  redis:
+    image: redis
+    container_name: redis
+    ports:
+      - "6379:6379"
+    networks:
+      - spring
 
 networks:
   postgres:
     driver: bridge
-
+  spring:
+    driver: bridge
+    
 volumes:
   postgres:
   pgadmin:
